[workspace]
resolver = "2"

members = [
  # crates.
  "crates/times-to-time",
  "crates/times-to-time-timer",
]

exclude = [".todo.md", "notes"]

[workspace.package]
edition = "2021"
keywords = ["time", "timer", "times-to-time"]
license = "MIT OR Apache"
readme = "README.md"
repository = "https://github.com/invisageable/times-to-time"
version = "0.0.0"

[workspace.dependencies]
times-to-time-timer = { path = "crates/times-to-time-timer", version = "0.0.0" }

criterion = { version = "0.5.1", features = ["html_reports"] }
smol_str = "0.2.0"
