[package]
name = "times-to-time-timer"
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

exclude = ["benches"]

[dependencies]
smol_str.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "time"
harness = false
